# backend_App_MinhaFarmacinha

./: .gitignore  MEDICATION_STOCK_MANAGEMENT.md  README.md  pyproject.toml  quasar.config.js  requirements.txt  run_notification_worker.py  setup.py
app/: __init__.py  main.py
app/api/: __init__.py  auth.py  chat.py  inventory.py  medication.py  notification.py  shopping.py  user.py
app/connection_db/: conection.py
app/core/: config.py  firebase.py  security.py
app/db/: init_db.py  session.py
app/dependencies/: auth.py
app/models/: __init__.py  medication.py  notification.py  shopping.py  user.py
app/schemas/: __init__.py  medication.py  notification.py  shopping.py  user.py
app/services/: __init__.py  medication.py  notification.py  shopping.py
app/utils/: notification_worker.py  websocket_manager.py
readmeService/: NOTIFICATION_SYSTEM.md
src/boot/: axios.ts
