[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minha_farmacinha"
version = "0.1.0"
authors = [
    { name = "Ivan", email = "seu.email@exemplo.com" },
]
description = "Backend da aplicação Minha Farmacinha"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["app"] 